crates/dao/tests/compile_fail/invalid_sql.stderr
error: invalid SQL in #[query] on method 'get_all': no such table: nonexistent_table
 --> tests/compile_fail/invalid_sql.rs:9:1
  |
9 | #[dao]
  | ^^^^^^
  |
  = note: this error originates in the attribute macro `dao` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused imports: `Pool`, `Result`, and `async_trait`
 --> tests/compile_fail/invalid_sql.rs:2:11
  |
2 | use dao::{async_trait, dao, Entity, Pool, Result};
  |           ^^^^^^^^^^^               ^^^^  ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
